--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,19 @@
 
 	<groupId>net.sf.sprockets</groupId>
 	<artifactId>sprockets-ee</artifactId>
-	<version>2.1.0</version>
+	<version>3.0.0</version>
 	<packaging>jar</packaging>
 	<dependencies>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.squareup.wire</groupId>
+			<artifactId>wire-runtime</artifactId>
+			<version>2.3.0-RC1</version>
+		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
@@ -16,15 +26,15 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>net.sf.sprockets</groupId>
+			<artifactId>sprockets</artifactId>
+			<version>4.0.0</version>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>net.sf.sprockets</groupId>
-			<artifactId>sprockets</artifactId>
-			<version>2.3.0</version>
 		</dependency>
 	</dependencies>
 	<properties>
@@ -36,26 +46,22 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.2</version>
+				<version>3.6.1</version>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>1.7</source>
+					<target>1.7</target>
 				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.10.1</version>
+				<version>2.10.4</version>
 				<configuration>
-					<includeDependencySources>true</includeDependencySources>
-					<dependencySourceIncludes>
-						<dependency-source>net.sf.sprockets:sprockets</dependency-source>
-					</dependencySourceIncludes>
 					<detectLinks>true</detectLinks>
 					<links>
-						<link>https://docs.oracle.com/javaee/6/api/</link>
-						<link>https://docs.oracle.com/javase/6/docs/api/</link>
-						<link>https://google-gson.googlecode.com/svn/trunk/gson/docs/javadocs/</link>
+						<link>https://docs.oracle.com/javaee/7/api/</link>
+						<link>https://docs.oracle.com/javase/7/docs/api/</link>
+						<link>https://google.github.io/gson/apidocs/</link>
 					</links>
 				</configuration>
 			</plugin>
@@ -63,7 +69,9 @@
 	</build>
 
 	<name>Sprockets EE</name>
-	<description>Base Servlet that reads and writes JSON objects.</description>
+	<description>
+		Base Servlets that read and write JSON objects or Protocol Buffers messages
+	</description>
 	<url>https://pushbit.github.io/sprockets-ee</url>
 	<licenses>
 		<license>
@@ -89,6 +97,6 @@
 		<url>https://github.com/pushbit/sprockets-ee</url>
 	</scm>
 	<prerequisites>
-		<maven>2.2.1</maven>
+		<maven>3.0</maven>
 	</prerequisites>
 </project>
